--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 				article
 				<h1>h1, h2, h3</h1>
 				<p>p</p>
-			</div>
+			</article>
 		</section>
 		<aside>aside</aside>
 		<footer>footer</footer>
