--- a/index.html
+++ b/index.html
@@ -1,21 +1,42 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en-us">
 	<head>
 		<meta charset="UTF-8">
+		<title>HomeWork Week 1</title>
 		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
 	<body>
-		<header>header</header>
-		<nav>nav</nav>
+<header>
+			<p>header</p>
+		</header>
+
+		<nav>
+			<p>nav</p>
+		</nav>
+
 		<section>
-			section
+			<heading>
+				<p>section</p>
+			</heading>	
 			<article>
-				article
+				<heading>article</heading>
 				<h1>h1, h2, h3</h1>
 				<p>p</p>
 			</article>
 		</section>
-		<aside>aside</aside>
-		<footer>footer</footer>
+
+		<aside>
+			<heading>
+				<p>aside</p>
+			</heading>
+		</aside>
+
+		<div class="clear"></div>
+
+		<footer>
+			<p>footer</p>
+		</footer>
+
+
 	</body>
 </html>
